# simutrans-extended

./: .desktop  .editorconfig  .gitignore  .simfab.cc.swp  CMakeLists.txt  Makefile  Makeobj-Extended.vcxproj  README.html  README.md  Simutrans-Extended.sln  Simutrans-Extended.vcxproj  Simutrans.vcxproj  clipboard_s2.cc  common.mk  config.default.in  config.template  configure.ac  convoy.cc  convoy.h  distribute.sh  freight_list_sorter.cc  freight_list_sorter.h  good-map-gen-numbers.txt  gui_vehicle_capacitybar.cc  gui_vehicle_capacitybar.h  old_blockmanager.cc  old_blockmanager.h  path_explorer.cc  path_explorer.h  pathes.h  readme.txt  restart.sh  scrolltext.h  simcity.cc  simcity.h  simcolor.h  simconvoi.cc  simconvoi.h  simdebug.cc  simdepot.cc  (+43 more)
.github/: init_env.py
.github/workflows/: ci.yml  linux-build.yml  msvc-build.yml  nightly.yml  run-tests.yml
OSX/: plistgen.sh
bauer/: brueckenbauer.cc  brueckenbauer.h  fabrikbauer.cc  fabrikbauer.h  goods_manager.cc  goods_manager.h  hausbauer.cc  hausbauer.h  pier_builder.cc  pier_builder.h  tree_builder.cc  tree_builder.h  tunnelbauer.cc  tunnelbauer.h  vehikelbauer.cc  vehikelbauer.h  wegbauer.cc  wegbauer.h
boden/: boden.cc  boden.h  brueckenboden.cc  brueckenboden.h  fundament.h  grund.cc  grund.h  monorailboden.cc  monorailboden.h  pier_deck.cc  pier_deck.h  tunnelboden.cc  tunnelboden.h  wasser.cc  wasser.h
boden/wege/: kanal.cc  maglev.cc  schiene.cc  schiene.h  strasse.cc  strasse.h  weg.cc  weg.h
cmake/: FindMiniUPNP.cmake  SimutransBackend.cmake  SimutransCompileOptions.cmake  SimutransDependencies.cmake  SimutransSourceList.cmake  SimutransVcpkgTriplet.cmake
dataobj/: crossing_logic.cc  crossing_logic.h  environment.cc  environment.h  freelist.cc  gameinfo.cc  gameinfo.h  height_map_loader.cc  height_map_loader.h  koord.cc  koord.h  koord3d.cc  koord3d.h  loadsave.cc  loadsave.h  marker.cc  marker.h  objlist.cc  objlist.h  powernet.cc  powernet.h  rect.cc  rect.h  replace_data.cc  replace_data.h  ribi.cc  ribi.h  route.cc  route.h  scenario.cc  scenario.h  schedule.cc  schedule.h  settings.cc  settings.h  sve_cache.cc  sve_cache.h  tabfile.cc  tabfile.h  translator.cc  (+1 more)
descriptor/: bridge_desc.h  building_desc.cc  building_desc.h  citycar_desc.h  crossing_desc.h  factory_desc.cc  factory_desc.h  goods_desc.cc  goods_desc.h  ground_desc.cc  ground_desc.h  image.h  image_array.h  image_list.h  obj_base_desc.h  objversion.h  pedestrian_desc.h  pier_desc.cc  pier_desc.h  roadsign_desc.h  skin_desc.h  sound_desc.cc  sound_desc.h  spezial_obj_tpl.h  tree_desc.h  tunnel_desc.cc  tunnel_desc.h  vehicle_desc.cc  vehicle_desc.h  way_desc.h  way_obj_desc.h
descriptor/reader/: bridge_reader.cc  bridge_reader.h  building_reader.cc  (+46 more)
display/: font.cc  font.h  scr_coord.h  simgraph.h  simgraph0.cc  simgraph16.cc  simimg.h  simview.cc  simview.h  viewport.cc  viewport.h
documentation/: cherry-picked-commits.txt
finder/: placefinder.cc
gui/: ai_selector.cc  banner.cc  banner.h  base_info.cc  baum_edit.cc  baum_edit.h  building_info.cc  building_info.h  city_info.cc  city_info.h  citybuilding_edit.cc  citybuilding_edit.h  citylist_frame_t.cc  citylist_frame_t.h  citylist_stats_t.cc  citylist_stats_t.h  climates.cc  convoi_detail_t.cc  convoi_detail_t.h  convoi_filter_frame.cc  convoi_filter_frame.h  convoi_frame.cc  convoi_frame.h  convoi_info_t.cc  convoi_info_t.h  convoy_item.h  curiosity_edit.cc  curiosity_edit.h  curiositylist_frame_t.cc  curiositylist_frame_t.h  curiositylist_stats_t.cc  curiositylist_stats_t.h  depot_frame.cc  depot_frame.h  depotlist_frame.cc  depotlist_frame.h  display_settings.cc  display_settings.h  enlarge_map_frame_t.cc  enlarge_map_frame_t.h  (+142 more)
ifc/: simtestdriver.h
io/: classify_file.cc  classify_file.h  raw_image.cc  raw_image.h  raw_image_bmp.cc  raw_image_png.cc  raw_image_ppm.cc
makeobj/: CMakeLists.txt  Makefile  makeobj.cc
music/: AVF_core-audio_midi.mm  fluidsynth.cc  music.h  w32_midi.cc
nettools/: CMakeLists.txt  Makefile  nettool.cc
network/: memory_rw.cc  network.cc  network.h  network_address.h  network_cmd.cc  network_cmd.h  network_cmd_ingame.cc  network_cmd_ingame.h  network_cmd_scenario.cc  network_cmd_scenario.h  network_cmp_pakset.cc  network_cmp_pakset.h  network_file_transfer.cc  network_file_transfer.h  network_packet.h  network_socket_list.cc  network_socket_list.h  pakset_info.cc
nsis/: other-functions.nsh  paksets.nsh
player/: ai.cc  ai_goods.cc  ai_goods.h  ai_passenger.cc  ai_passenger.h  finance.cc  finance.h  simplay.cc  simplay.h
script/: api_class.cc  api_class.h  api_function.cc  api_function.h  api_param.cc  api_param.h  dynamic_string.cc  dynamic_string.h  export_objs.cc  export_objs.h  script.cc  script.h  script_loader.cc  script_loader.h  script_tool_manager.cc  script_tool_manager.h
scripts/: run-automated-tests.sh
simutrans/: history.txt
sound/: sdl2_sound.cc  win32_sound_xa.cc
squirrel/: sq_extensions.cc
sys/: clipboard_internal.cc  clipboard_s2.cc  clipboard_w32.cc  simsys.cc  simsys.h  simsys_posix.cc  simsys_s2.cc  simsys_w.cc
tests/: all_tests.nut  empty-16x16.sve  scenario.nut  test_helpers.nut
themes.src/: build_themes.sh
tpl/: array2d_tpl.h  array_tpl.h  binary_heap_tpl.h  freelist_iter_tpl.h  freelist_tpl.h  hashtable_tpl.h  inthashtable_tpl.h  ordered_vector_tpl.h  piecewise_linear_tpl.h  ptrhashtable_tpl.h  quickstone_tpl.h  slist_tpl.h  sparse_tpl.h  stringhashtable_tpl.h  test_piecewise_linear_tpl.cc  vector_tpl.h  weighted_vector_tpl.h
utils/: cbuffer_t.cc  cbuffer_t.h  checklist.cc  checklist.h  csv.h  dr_rdpng.cc  fetchopt.h  float32e8_t.cc  float32e8_t.h  log.cc  log.h  searchfolder.cc  searchfolder.h  sha1.h  simrandom.cc  simrandom.h  simstring.h
vehicle/: air_vehicle.cc  air_vehicle.h  movingobj.cc  movingobj.h  overtaker.h  pedestrian.cc  pedestrian.h  rail_vehicle.cc  rail_vehicle.h  road_vehicle.cc  road_vehicle.h  simpeople.cc  simroadtraffic.cc  simroadtraffic.h  simvehicle.cc  simvehicle.h  vehicle.cc  vehicle.h  water_vehicle.cc  water_vehicle.h
world/: terraformer.cc  terraformer.h
(+253 files in other folders)
